# cimage

./: CMakeLists.txt  README.md  flake.nix  main.cpp
.github/workflows/: tests.yml
DOCS/: TODO  png_chunks.md
src/: comfy_utils.cpp  comfy_utils.hpp  main.cpp  png_utils.cpp  png_utils.hpp
tests/: test_main.cpp
